*Fixed bug with plainPassword feild allwaysing being blank
*Now Users can login with email or Username

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,10 +9,10 @@ security:
         
 
     providers:
-        Database:
-            entity:  
-                class: AbeloginBundle:user2
-                property: username 
+        administrators: 
+            entity:  { class: AbeloginBundle:user2 }
+              #  class: AbeloginBundle:user2
+               # property: username 
     
         in_memory:
             memory:
