--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+abe_file_upload:
+    resource: "@AbeFileUploadBundle/Resources/config/routing.yml"
+    prefix:   /
+
 abelogin:
     resource: "@AbeloginBundle/Resources/config/routing.yml"
     prefix:   /
