--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,4 +1,6 @@
 security:
+    always_authenticate_before_granting:
+    
     encoders:
         Abe\loginBundle\Entity\user2: bcrypt
         Symfony\Component\Security\Core\User\User: plaintext
@@ -36,7 +38,8 @@ security:
             #    realm: "Secured Demo Area"
 
     access_control:
+        - { path: ^/main/user2/new , roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/main , roles: ROLE_USER }
         
         
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        
