--- a/src/Abe/FileUploadBundle/Resources/config/routing.yml
+++ b/src/Abe/FileUploadBundle/Resources/config/routing.yml
@@ -1,3 +1,12 @@
 abe_file_upload_homepage:
     path:     /hello/{name}
     defaults: { _controller: AbeFileUploadBundle:Default:index }
+
+File_upload:
+    resource: "@AbeFileUploadBundle/Controller/UploadController.php"
+    type:     annotation 
+    
+File_document:
+    resource: "@AbeFileUploadBundle/Controller/DocumentController.php"
+    type:     annotation 
+    
